Assignment/compiler/parser.out
Grammar:

Rule 0     S' -> program
Rule 1     program -> functionDeclaration
Rule 2     program -> statements
Rule 3     statements -> statement EOL
Rule 4     statements -> statement EOL statements
Rule 5     statement -> loopStatement
Rule 6     statement -> conditionalStatement
Rule 7     statement -> compoundStatement
Rule 8     statement -> functionStatement
Rule 9     statement -> variableDeclaration
Rule 10    statement -> assignmentStatement
Rule 11    statement -> emptyStatement
Rule 12    assignmentStatement -> IDENT LSQBR expression SLICE expression RSQBR ASSIGN expression
Rule 13    assignmentStatement -> IDENT LSQBR expression RSQBR ASSIGN expression
Rule 14    assignmentStatement -> IDENT ASSIGN expression
Rule 15    functionStatement -> IDENT LPAREN fargs RPAREN
Rule 16    functionStatement -> IDENT LPAREN RPAREN
Rule 17    compoundStatement -> BEGIN statements END
Rule 18    conditionalStatement -> IF LPAREN expression RPAREN compoundStatement ELSE compoundStatement
Rule 19    conditionalStatement -> IF LPAREN expression RPAREN compoundStatement
Rule 20    loopStatement -> FOR LPAREN IDENT ASSIGN IDENT TO IDENT RPAREN compoundStatement
Rule 21    loopStatement -> FOR LPAREN IDENT ASSIGN NUM TO IDENT RPAREN compoundStatement
Rule 22    loopStatement -> FOR LPAREN IDENT ASSIGN IDENT TO NUM RPAREN compoundStatement
Rule 23    loopStatement -> FOR LPAREN IDENT ASSIGN NUM TO NUM RPAREN compoundStatement
Rule 24    loopStatement -> WHILE LPAREN expression RPAREN compoundStatement
Rule 25    emptyStatement -> <empty>
Rule 26    variableDeclaration -> VAR IDENT ASSIGN expression
Rule 27    functionDeclaration -> FUNCTION IDENT LPAREN args RPAREN compoundStatement
Rule 28    functionDeclaration -> FUNCTION IDENT LPAREN RPAREN compoundStatement
Rule 29    args -> IDENT
Rule 30    args -> IDENT COMMA args
Rule 31    fargs -> expression
Rule 32    fargs -> expression COMMA fargs
Rule 33    expression -> binop
Rule 34    binop -> binop OR unop
Rule 35    binop -> binop AND unop
Rule 36    binop -> binop BITXOR unop
Rule 37    binop -> binop BITOR unop
Rule 38    binop -> binop BITAND unop
Rule 39    binop -> binop SAR unop
Rule 40    binop -> binop SAL unop
Rule 41    binop -> binop NEQ unop
Rule 42    binop -> binop EQ unop
Rule 43    binop -> binop GTEQ unop
Rule 44    binop -> binop GT unop
Rule 45    binop -> binop LTEQ unop
Rule 46    binop -> binop LT unop
Rule 47    binop -> binop MOD unop
Rule 48    binop -> binop DIV unop
Rule 49    binop -> binop MUL unop
Rule 50    binop -> binop SUB unop
Rule 51    binop -> binop ADD unop
Rule 52    binop -> unop
Rule 53    unop -> NOT term
Rule 54    unop -> BITNOT term
Rule 55    unop -> SUB term
Rule 56    unop -> ADD term
Rule 57    unop -> term
Rule 58    term -> functionStatement
Rule 59    term -> IDENT LSQBR expression SLICE expression RSQBR
Rule 60    term -> IDENT LSQBR expression RSQBR
Rule 61    term -> LPAREN fargs RPAREN
Rule 62    term -> LSQBR fargs RSQBR
Rule 63    term -> LSQBR RSQBR
Rule 64    term -> IDENT
Rule 65    term -> STRING
Rule 66    term -> BOOL
Rule 67    term -> NUM

Terminals, with rules where they appear:

ADD                  : 51 56
AND                  : 35
ASSIGN               : 12 13 14 20 21 22 23 26
BEGIN                : 17
BITAND               : 38
BITNOT               : 54
BITOR                : 37
BITXOR               : 36
BOOL                 : 66
COMMA                : 30 32
DIV                  : 48
ELSE                 : 18
END                  : 17
EOL                  : 3 4
EQ                   : 42
FOR                  : 20 21 22 23
FUNCTION             : 27 28
GT                   : 44
GTEQ                 : 43
IDENT                : 12 13 14 15 16 20 20 20 21 21 22 22 23 26 27 28 29 30 59 60 64
IF                   : 18 19
LPAREN               : 15 16 18 19 20 21 22 23 24 27 28 61
LSQBR                : 12 13 59 60 62 63
LT                   : 46
LTEQ                 : 45
MOD                  : 47
MUL                  : 49
NEQ                  : 41
NOT                  : 53
NUM                  : 21 22 23 23 67
OR                   : 34
RPAREN               : 15 16 18 19 20 21 22 23 24 27 28 61
RSQBR                : 12 13 59 60 62 63
SAL                  : 40
SAR                  : 39
SLICE                : 12 59
STRING               : 65
SUB                  : 50 55
TO                   : 20 21 22 23
VAR                  : 26
WHILE                : 24
error                : 

Nonterminals, with rules where they appear:

args                 : 27 30
assignmentStatement  : 10
binop                : 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
compoundStatement    : 7 18 18 19 20 21 22 23 24 27 28
conditionalStatement : 6
emptyStatement       : 11
expression           : 12 12 12 13 13 14 18 19 24 26 31 32 59 59 60
fargs                : 15 32 61 62
functionDeclaration  : 1
functionStatement    : 8 58
loopStatement        : 5
program              : 0
statement            : 3 4
statements           : 2 4 17
term                 : 53 54 55 56 57
unop                 : 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
variableDeclaration  : 9


state 0

    (0) S' -> . program
    (1) program -> . functionDeclaration
    (2) program -> . statements
    (27) functionDeclaration -> . FUNCTION IDENT LPAREN args RPAREN compoundStatement
    (28) functionDeclaration -> . FUNCTION IDENT LPAREN RPAREN compoundStatement
    (3) statements -> . statement EOL
    (4) statements -> . statement EOL statements
    (5) statement -> . loopStatement
    (6) statement -> . conditionalStatement
    (7) statement -> . compoundStatement
    (8) statement -> . functionStatement
    (9) statement -> . variableDeclaration
    (10) statement -> . assignmentStatement
    (11) statement -> . emptyStatement
    (20) loopStatement -> . FOR LPAREN IDENT ASSIGN IDENT TO IDENT RPAREN compoundStatement
    (21) loopStatement -> . FOR LPAREN IDENT ASSIGN NUM TO IDENT RPAREN compoundStatement
    (22) loopStatement -> . FOR LPAREN IDENT ASSIGN IDENT TO NUM RPAREN compoundStatement
    (23) loopStatement -> . FOR LPAREN IDENT ASSIGN NUM TO NUM RPAREN compoundStatement
    (24) loopStatement -> . WHILE LPAREN expression RPAREN compoundStatement
    (18) conditionalStatement -> . IF LPAREN expression RPAREN compoundStatement ELSE compoundStatement
    (19) conditionalStatement -> . IF LPAREN expression RPAREN compoundStatement
    (17) compoundStatement -> . BEGIN statements END
    (15) functionStatement -> . IDENT LPAREN fargs RPAREN
    (16) functionStatement -> . IDENT LPAREN RPAREN
    (26) variableDeclaration -> . VAR IDENT ASSIGN expression
    (12) assignmentStatement -> . IDENT LSQBR expression SLICE expression RSQBR ASSIGN expression
    (13) assignmentStatement -> . IDENT LSQBR expression RSQBR ASSIGN expression
    (14) assignmentStatement -> . IDENT ASSIGN expression
    (25) emptyStatement -> .
    FUNCTION        shift and go to state 4
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    IF              shift and go to state 16
    BEGIN           shift and go to state 17
    IDENT           shift and go to state 5
    VAR             shift and go to state 18
    EOL             reduce using rule 25 (emptyStatement -> .)

    program                        shift and go to state 1
    functionDeclaration            shift and go to state 2
    statements                     shift and go to state 3
    compoundStatement              shift and go to state 6
    statement                      shift and go to state 7
    loopStatement                  shift and go to state 8
    conditionalStatement           shift and go to state 9
    functionStatement              shift and go to state 10
    variableDeclaration            shift and go to state 11
    assignmentStatement            shift and go to state 12
    emptyStatement                 shift and go to state 13

state 1

    (0) S' -> program .


state 2

    (1) program -> functionDeclaration .
    $end            reduce using rule 1 (program -> functionDeclaration .)


state 3

    (2) program -> statements .
    $end            reduce using rule 2 (program -> statements .)


state 4

    (27) functionDeclaration -> FUNCTION . IDENT LPAREN args RPAREN compoundStatement
    (28) functionDeclaration -> FUNCTION . IDENT LPAREN RPAREN compoundStatement
    IDENT           shift and go to state 19


state 5

    (15) functionStatement -> IDENT . LPAREN fargs RPAREN
    (16) functionStatement -> IDENT . LPAREN RPAREN
    (12) assignmentStatement -> IDENT . LSQBR expression SLICE expression RSQBR ASSIGN expression
    (13) assignmentStatement -> IDENT . LSQBR expression RSQBR ASSIGN expression
    (14) assignmentStatement -> IDENT . ASSIGN expression
    LPAREN          shift and go to state 20
    LSQBR           shift and go to state 21
    ASSIGN          shift and go to state 22


state 6

    (7) statement -> compoundStatement .
    EOL             reduce using rule 7 (statement -> compoundStatement .)


state 7

    (3) statements -> statement . EOL
    (4) statements -> statement . EOL statements
    EOL             shift and go to state 23


state 8

    (5) statement -> loopStatement .
    EOL             reduce using rule 5 (statement -> loopStatement .)


state 9

    (6) statement -> conditionalStatement .
    EOL             reduce using rule 6 (statement -> conditionalStatement .)


state 10

    (8) statement -> functionStatement .
    EOL             reduce using rule 8 (statement -> functionStatement .)


state 11

    (9) statement -> variableDeclaration .
    EOL             reduce using rule 9 (statement -> variableDeclaration .)


state 12

    (10) statement -> assignmentStatement .
    EOL             reduce using rule 10 (statement -> assignmentStatement .)


state 13

    (11) statement -> emptyStatement .
    EOL             reduce using rule 11 (statement -> emptyStatement .)


state 14

    (20) loopStatement -> FOR . LPAREN IDENT ASSIGN IDENT TO IDENT RPAREN compoundStatement
    (21) loopStatement -> FOR . LPAREN IDENT ASSIGN NUM TO IDENT RPAREN compoundStatement
    (22) loopStatement -> FOR . LPAREN IDENT ASSIGN IDENT TO NUM RPAREN compoundStatement
    (23) loopStatement -> FOR . LPAREN IDENT ASSIGN NUM TO NUM RPAREN compoundStatement
    LPAREN          shift and go to state 24


state 15

    (24) loopStatement -> WHILE . LPAREN expression RPAREN compoundStatement
    LPAREN          shift and go to state 25


state 16

    (18) conditionalStatement -> IF . LPAREN expression RPAREN compoundStatement ELSE compoundStatement
    (19) conditionalStatement -> IF . LPAREN expression RPAREN compoundStatement
    LPAREN          shift and go to state 26


state 17

    (17) compoundStatement -> BEGIN . statements END
    (3) statements -> . statement EOL
    (4) statements -> . statement EOL statements
    (5) statement -> . loopStatement
    (6) statement -> . conditionalStatement
    (7) statement -> . compoundStatement
    (8) statement -> . functionStatement
    (9) statement -> . variableDeclaration
    (10) statement -> . assignmentStatement
    (11) statement -> . emptyStatement
    (20) loopStatement -> . FOR LPAREN IDENT ASSIGN IDENT TO IDENT RPAREN compoundStatement
    (21) loopStatement -> . FOR LPAREN IDENT ASSIGN NUM TO IDENT RPAREN compoundStatement
    (22) loopStatement -> . FOR LPAREN IDENT ASSIGN IDENT TO NUM RPAREN compoundStatement
    (23) loopStatement -> . FOR LPAREN IDENT ASSIGN NUM TO NUM RPAREN compoundStatement
    (24) loopStatement -> . WHILE LPAREN expression RPAREN compoundStatement
    (18) conditionalStatement -> . IF LPAREN expression RPAREN compoundStatement ELSE compoundStatement
    (19) conditionalStatement -> . IF LPAREN expression RPAREN compoundStatement
    (17) compoundStatement -> . BEGIN statements END
    (15) functionStatement -> . IDENT LPAREN fargs RPAREN
    (16) functionStatement -> . IDENT LPAREN RPAREN
    (26) variableDeclaration -> . VAR IDENT ASSIGN expression
    (12) assignmentStatement -> . IDENT LSQBR expression SLICE expression RSQBR ASSIGN expression
    (13) assignmentStatement -> . IDENT LSQBR expression RSQBR ASSIGN expression
    (14) assignmentStatement -> . IDENT ASSIGN expression
    (25) emptyStatement -> .
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    IF              shift and go to state 16
    BEGIN           shift and go to state 17
    IDENT           shift and go to state 5
    VAR             shift and go to state 18
    EOL             reduce using rule 25 (emptyStatement -> .)

    statements                     shift and go to state 27
    statement                      shift and go to state 7
    loopStatement                  shift and go to state 8
    conditionalStatement           shift and go to state 9
    compoundStatement              shift and go to state 6
    functionStatement              shift and go to state 10
    variableDeclaration            shift and go to state 11
    assignmentStatement            shift and go to state 12
    emptyStatement                 shift and go to state 13

state 18

    (26) variableDeclaration -> VAR . IDENT ASSIGN expression
    IDENT           shift and go to state 28


state 19

    (27) functionDeclaration -> FUNCTION IDENT . LPAREN args RPAREN compoundStatement
    (28) functionDeclaration -> FUNCTION IDENT . LPAREN RPAREN compoundStatement
    LPAREN          shift and go to state 29


state 20

    (15) functionStatement -> IDENT LPAREN . fargs RPAREN
    (16) functionStatement -> IDENT LPAREN . RPAREN
    (31) fargs -> . expression
    (32) fargs -> . expression COMMA fargs
    (33) expression -> . binop
    (34) binop -> . binop OR unop
    (35) binop -> . binop AND unop
    (36) binop -> . binop BITXOR unop
    (37) binop -> . binop BITOR unop
    (38) binop -> . binop BITAND unop
    (39) binop -> . binop SAR unop
    (40) binop -> . binop SAL unop
    (41) binop -> . binop NEQ unop
    (42) binop -> . binop EQ unop
    (43) binop -> . binop GTEQ unop
    (44) binop -> . binop GT unop
    (45) binop -> . binop LTEQ unop
    (46) binop -> . binop LT unop
    (47) binop -> . binop MOD unop
    (48) binop -> . binop DIV unop
    (49) binop -> . binop MUL unop
    (50) binop -> . binop SUB unop
    (51) binop -> . binop ADD unop
    (52) binop -> . unop
    (53) unop -> . NOT term
    (54) unop -> . BITNOT term
    (55) unop -> . SUB term
    (56) unop -> . ADD term
    (57) unop -> . term
    (58) term -> . functionStatement
    (59) term -> . IDENT LSQBR expression SLICE expression RSQBR
    (60) term -> . IDENT LSQBR expression RSQBR
    (61) term -> . LPAREN fargs RPAREN
    (62) term -> . LSQBR fargs RSQBR
    (63) term -> . LSQBR RSQBR
    (64) term -> . IDENT
    (65) term -> . STRING
    (66) term -> . BOOL
    (67) term -> . NUM
    (15) functionStatement -> . IDENT LPAREN fargs RPAREN
    (16) functionStatement -> . IDENT LPAREN RPAREN
    RPAREN          shift and go to state 33
    NOT             shift and go to state 39
    BITNOT          shift and go to state 41
    SUB             shift and go to state 37
    ADD             shift and go to state 38
    IDENT           shift and go to state 30
    LPAREN          shift and go to state 31
    LSQBR           shift and go to state 43
    STRING          shift and go to state 44
    BOOL            shift and go to state 45
    NUM             shift and go to state 46

    fargs                          shift and go to state 32
    expression                     shift and go to state 34
    binop                          shift and go to state 35
    unop                           shift and go to state 36
    term                           shift and go to state 40
    functionStatement              shift and go to state 42

state 21

    (12) assignmentStatement -> IDENT LSQBR . expression SLICE expression RSQBR ASSIGN expression
    (13) assignmentStatement -> IDENT LSQBR . expression RSQBR ASSIGN expression
    (33) expression -> . binop
    (34) binop -> . binop OR unop
    (35) binop -> . binop AND unop
    (36) binop -> . binop BITXOR unop
    (37) binop -> . binop BITOR unop
    (38) binop -> . binop BITAND unop
    (39) binop -> . binop SAR unop
    (40) binop -> . binop SAL unop
    (41) binop -> . binop NEQ unop
    (42) binop -> . binop EQ unop
    (43) binop -> . binop GTEQ unop
    (44) binop -> . binop GT unop
    (45) binop -> . binop LTEQ unop
    (46) binop -> . binop LT unop
    (47) binop -> . binop MOD unop
    (48) binop -> . binop DIV unop
    (49) binop -> . binop MUL unop
    (50) binop -> . binop SUB unop
    (51) binop -> . binop ADD unop
    (52) binop -> . unop
    (53) unop -> . NOT term
    (54) unop -> . BITNOT term
    (55) unop -> . SUB term
    (56) unop -> . ADD term
    (57) unop -> . term
    (58) term -> . functionStatement
    (59) term -> . IDENT LSQBR expression SLICE expression RSQBR
    (60) term -> . IDENT LSQBR expression RSQBR
    (61) term -> . LPAREN fargs RPAREN
    (62) term -> . LSQBR fargs RSQBR
    (63) term -> . LSQBR RSQBR
    (64) term -> . IDENT
    (65) term -> . STRING
    (66) term -> . BOOL
    (67) term -> . NUM
    (15) functionStatement -> . IDENT LPAREN fargs RPAREN
    (16) functionStatement -> . IDENT LPAREN RPAREN
    NOT             shift and go to state 39
    BITNOT          shift and go to state 41
    SUB             shift and go to state 37
    ADD             shift and go to state 38
    IDENT           shift and go to state 30
    LPAREN          shift and go to state 31
    LSQBR           shift and go to state 43
    STRING          shift and go to state 44
    BOOL            shift and go to state 45
    NUM             shift and go to state 46

    expression                     shift and go to state 47
    binop                          shift and go to state 35
    unop                           shift and go to state 36
    term                           shift and go to state 40
    functionStatement              shift and go to state 42

state 22

    (14) assignmentStatement -> IDENT ASSIGN . expression
    (33) expression -> . binop
    (34) binop -> . binop OR unop
    (35) binop -> . binop AND unop
    (36) binop -> . binop BITXOR unop
    (37) binop -> . binop BITOR unop
    (38) binop -> . binop BITAND unop
    (39) binop -> . binop SAR unop
    (40) binop -> . binop SAL unop
    (41) binop -> . binop NEQ unop
    (42) binop -> . binop EQ unop
    (43) binop -> . binop GTEQ unop
    (44) binop -> . binop GT unop
    (45) binop -> . binop LTEQ unop
    (46) binop -> . binop LT unop
    (47) binop -> . binop MOD unop
    (48) binop -> . binop DIV unop
    (49) binop -> . binop MUL unop
    (50) binop -> . binop SUB unop
    (51) binop -> . binop ADD unop
    (52) binop -> . unop
    (53) unop -> . NOT term
    (54) unop -> . BITNOT term
    (55) unop -> . SUB term
    (56) unop -> . ADD term
    (57) unop -> . term
    (58) term -> . functionStatement
    (59) term -> . IDENT LSQBR expression SLICE expression RSQBR
    (60) term -> . IDENT LSQBR expression RSQBR
    (61) term -> . LPAREN fargs RPAREN
    (62) term -> . LSQBR fargs RSQBR
    (63) term -> . LSQBR RSQBR
    (64) term -> . IDENT
    (65) term -> . STRING
    (66) term -> . BOOL
    (67) term -> . NUM
    (15) functionStatement -> . IDENT LPAREN fargs RPAREN
    (16) functionStatement -> . IDENT LPAREN RPAREN
    NOT             shift and go to state 39
    BITNOT          shift and go to state 41
    SUB             shift and go to state 37
    ADD             shift and go to state 38
    IDENT           shift and go to state 30
    LPAREN          shift and go to state 31
    LSQBR           shift and go to state 43
    STRING          shift and go to state 44
    BOOL            shift and go to state 45
    NUM             shift and go to state 46

    expression                     shift and go to state 48
    binop                          shift and go to state 35
    unop                           shift and go to state 36
    term                           shift and go to state 40
    functionStatement              shift and go to state 42

state 23

    (3) statements -> statement EOL .
    (4) statements -> statement EOL . statements
    (3) statements -> . statement EOL
    (4) statements -> . statement EOL statements
    (5) statement -> . loopStatement
    (6) statement -> . conditionalStatement
    (7) statement -> . compoundStatement
    (8) statement -> . functionStatement
    (9) statement -> . variableDeclaration
    (10) statement -> . assignmentStatement
    (11) statement -> . emptyStatement
    (20) loopStatement -> . FOR LPAREN IDENT ASSIGN IDENT TO IDENT RPAREN compoundStatement
    (21) loopStatement -> . FOR LPAREN IDENT ASSIGN NUM TO IDENT RPAREN compoundStatement
    (22) loopStatement -> . FOR LPAREN IDENT ASSIGN IDENT TO NUM RPAREN compoundStatement
    (23) loopStatement -> . FOR LPAREN IDENT ASSIGN NUM TO NUM RPAREN compoundStatement
    (24) loopStatement -> . WHILE LPAREN expression RPAREN compoundStatement
    (18) conditionalStatement -> . IF LPAREN expression RPAREN compoundStatement ELSE compoundStatement
    (19) conditionalStatement -> . IF LPAREN expression RPAREN compoundStatement
    (17) compoundStatement -> . BEGIN statements END
    (15) functionStatement -> . IDENT LPAREN fargs RPAREN
    (16) functionStatement -> . IDENT LPAREN RPAREN
    (26) variableDeclaration -> . VAR IDENT ASSIGN expression
    (12) assignmentStatement -> . IDENT LSQBR expression SLICE expression RSQBR ASSIGN expression
    (13) assignmentStatement -> . IDENT LSQBR expression RSQBR ASSIGN expression
    (14) assignmentStatement -> . IDENT ASSIGN expression
    (25) emptyStatement -> .
    $end            reduce using rule 3 (statements -> statement EOL .)
    END             reduce using rule 3 (statements -> statement EOL .)
    FOR             shift and go to state 14
    WHILE           shift and go to state 15
    IF              shift and go to state 16
    BEGIN           shift and go to state 17
    IDENT           shift and go to state 5
    VAR             shift and go to state 18
    EOL             reduce using rule 25 (emptyStatement -> .)

    statement                      shift and go to state 7
    statements                     shift and go to state 49
    loopStatement                  shift and go to state 8
    conditionalStatement           shift and go to state 9
    compoundStatement              shift and go to state 6
    functionStatement              shift and go to state 10
    variableDeclaration            shift and go to state 11
    assignmentStatement            shift and go to state 12
    emptyStatement                 shift and go to state 13

state 24

    (20) loopStatement -> FOR LPAREN . IDENT ASSIGN IDENT TO IDENT RPAREN compoundStatement
    (21) loopStatement -> FOR LPAREN . IDENT ASSIGN NUM TO IDENT RPAREN compoundStatement
    (22) loopStatement -> FOR LPAREN . IDENT ASSIGN IDENT TO NUM RPAREN compoundStatement
    (23) loopStatement -> FOR LPAREN . IDENT ASSIGN NUM TO NUM RPAREN compoundStatement
    IDENT           shift and go to state 50


state 25

    (24) loopStatement -> WHILE LPAREN . expression RPAREN compoundStatement
    (33) expression -> . binop
    (34) binop -> . binop OR unop
    (35) binop -> . binop AND unop
    (36) binop -> . binop BITXOR unop
    (37) binop -> . binop BITOR unop
    (38) binop -> . binop BITAND unop
    (39) binop -> . binop SAR unop
    (40) binop -> . binop SAL unop
    (41) binop -> . binop NEQ unop
    (42) binop -> . binop EQ unop
    (43) binop -> . binop GTEQ unop
    (44) binop -> . binop GT unop
    (45) binop -> . binop LTEQ unop
    (46) binop -> . binop LT unop
    (47) binop -> . binop MOD unop
    (48) binop -> . binop DIV unop
    (49) binop -> . binop MUL unop
    (50) binop -> . binop SUB unop
    (51) binop -> . binop ADD unop
    (52) binop -> . unop
    (53) unop -> . NOT term
    (54) unop -> . BITNOT term
    (55) unop -> . SUB term
    (56) unop -> . ADD term
    (57) unop -> . term
    (58) term -> . functionStatement
    (59) term -> . IDENT LSQBR expression SLICE expression RSQBR
    (60) term -> . IDENT LSQBR expression RSQBR
    (61) term -> . LPAREN fargs RPAREN
    (62) term -> . LSQBR fargs RSQBR
    (63) term -> . LSQBR RSQBR
    (64) term -> . IDENT
    (65) term -> . STRING
    (66) term -> . BOOL
    (67) term -> . NUM
    (15) functionStatement -> . IDENT LPAREN fargs RPAREN
    (16) functionStatement -> . IDENT LPAREN RPAREN
    NOT             shift and go to state 39
    BITNOT          shift and go to state 41
    SUB             shift and go to state 37
    ADD             shift and go to state 38
    IDENT           shift and go to state 30
    LPAREN          shift and go to state 31
    LSQBR           shift and go to state 43
    STRING          shift and go to state 44
    BOOL            shift and go to state 45
    NUM             shift and go to state 46

    expression                     shift and go to state 51
    binop                          shift and go to state 35
    unop                           shift and go to state 36
    term                           shift and go to state 40
    functionStatement              shift and go to state 42

state 26

    (18) conditionalStatement -> IF LPAREN . expression RPAREN compoundStatement ELSE compoundStatement
    (19) conditionalStatement -> IF LPAREN . expression RPAREN compoundStatement
    (33) expression -> . binop
    (34) binop -> . binop OR unop
    (35) binop -> . binop AND unop
    (36) binop -> . binop BITXOR unop
    (37) binop -> . binop BITOR unop
    (38) binop -> . binop BITAND unop
    (39) binop -> . binop SAR unop
    (40) binop -> . binop SAL unop
    (41) binop -> . binop NEQ unop
    (42) binop -> . binop EQ unop
    (43) binop -> . binop GTEQ unop
    (44) binop -> . binop GT unop
    (45) binop -> . binop LTEQ unop
    (46) binop -> . binop LT unop
    (47) binop -> . binop MOD unop
    (48) binop -> . binop DIV unop
    (49) binop -> . binop MUL unop
    (50) binop -> . binop SUB unop
    (51) binop -> . binop ADD unop
    (52) binop -> . unop
    (53) unop -> . NOT term
    (54) unop -> . BITNOT term
    (55) unop -> . SUB term
    (56) unop -> . ADD term
    (57) unop -> . term
    (58) term -> . functionStatement
    (59) term -> . IDENT LSQBR expression SLICE expression RSQBR
    (60) term -> . IDENT LSQBR expression RSQBR
    (61) term -> . LPAREN fargs RPAREN
    (62) term -> . LSQBR fargs RSQBR
    (63) term -> . LSQBR RSQBR
    (64) term -> . IDENT
    (65) term -> . STRING
    (66) term -> . BOOL
    (67) term -> . NUM
    (15) functionStatement -> . IDENT LPAREN fargs RPAREN
    (16) functionStatement -> . IDENT LPAREN RPAREN
    NOT             shift and go to state 39
    BITNOT          shift and go to state 41
    SUB             shift and go to state 37
    ADD             shift and go to state 38
    IDENT           shift and go to state 30
    LPAREN          shift and go to state 31
    LSQBR           shift and go to state 43
    STRING          shift and go to state 44
    BOOL            shift and go to state 45
    NUM             shift and go to state 46

    expression                     shift and go to state 52
    binop                          shift and go to state 35
    unop                           shift and go to state 36
    term                           shift and go to state 40
    functionStatement              shift and go to state 42

state 27

    (17) compoundStatement -> BEGIN statements . END
    END             shift and go to state 53


state 28

    (26) variableDeclaration -> VAR IDENT . ASSIGN expression
    ASSIGN          shift and go to state 54


state 29

    (27) functionDeclaration -> FUNCTION IDENT LPAREN . args RPAREN compoundStatement
    (28) functionDeclaration -> FUNCTION IDENT LPAREN . RPAREN compoundStatement
    (29) args -> . IDENT
    (30) args -> . IDENT COMMA args
    RPAREN          shift and go to state 57
    IDENT           shift and go to state 55

    args                           shift and go to state 56

state 30

    (59) term -> IDENT . LSQBR expression SLICE expression RSQBR
    (60) term -> IDENT . LSQBR expression RSQBR
    (64) term -> IDENT .
    (15) functionStatement -> IDENT . LPAREN fargs RPAREN
    (16) functionStatement -> IDENT . LPAREN RPAREN
    LSQBR           shift and go to state 58
    OR              reduce using rule 64 (term -> IDENT .)
    AND             reduce using rule 64 (term -> IDENT .)
    BITXOR          reduce using rule 64 (term -> IDENT .)
    BITOR           reduce using rule 64 (term -> IDENT .)
    BITAND          reduce using rule 64 (term -> IDENT .)
    SAR             reduce using rule 64 (term -> IDENT .)
    SAL             reduce using rule 64 (term -> IDENT .)
    NEQ             reduce using rule 64 (term -> IDENT .)
    EQ              reduce using rule 64 (term -> IDENT .)
    GTEQ            reduce using rule 64 (term -> IDENT .)
    GT              reduce using rule 64 (term -> IDENT .)
    LTEQ            reduce using rule 64 (term -> IDENT .)
    LT              reduce using rule 64 (term -> IDENT .)
    MOD             reduce using rule 64 (term -> IDENT .)
    DIV             reduce using rule 64 (term -> IDENT .)
    MUL             reduce using rule 64 (term -> IDENT .)
    SUB             reduce using rule 64 (term -> IDENT .)
    ADD             reduce using rule 64 (term -> IDENT .)
    COMMA           reduce using rule 64 (term -> IDENT .)
    RPAREN          reduce using rule 64 (term -> IDENT .)
    SLICE           reduce using rule 64 (term -> IDENT .)
    RSQBR           reduce using rule 64 (term -> IDENT .)
    EOL             reduce using rule 64 (term -> IDENT .)
    LPAREN          shift and go to state 20


state 31

    (61) term -> LPAREN . fargs RPAREN
    (31) fargs -> . expression
    (32) fargs -> . expression COMMA fargs
    (33) expression -> . binop
    (34) binop -> . binop OR unop
    (35) binop -> . binop AND unop
    (36) binop -> . binop BITXOR unop
    (37) binop -> . binop BITOR unop
    (38) binop -> . binop BITAND unop
    (39) binop -> . binop SAR unop
    (40) binop -> . binop SAL unop
    (41) binop -> . binop NEQ unop
    (42) binop -> . binop EQ unop
    (43) binop -> . binop GTEQ unop
    (44) binop -> . binop GT unop
    (45) binop -> . binop LTEQ unop
    (46) binop -> . binop LT unop
    (47) binop -> . binop MOD unop
    (48) binop -> . binop DIV unop
    (49) binop -> . binop MUL unop
    (50) binop -> . binop SUB unop
    (51) binop -> . binop ADD unop
    (52) binop -> . unop
    (53) unop -> . NOT term
    (54) unop -> . BITNOT term
    (55) unop -> . SUB term
    (56) unop -> . ADD term
    (57) unop -> . term
    (58) term -> . functionStatement
    (59) term -> . IDENT LSQBR expression SLICE expression RSQBR
    (60) term -> . IDENT LSQBR expression RSQBR
    (61) term -> . LPAREN fargs RPAREN
    (62) term -> . LSQBR fargs RSQBR
    (63) term -> . LSQBR RSQBR
    (64) term -> . IDENT
    (65) term -> . STRING
    (66) term -> . BOOL
    (67) term -> . NUM
    (15) functionStatement -> . IDENT LPAREN fargs RPAREN
    (16) functionStatement -> . IDENT LPAREN RPAREN
    NOT             shift and go to state 39
    BITNOT          shift and go to state 41
    SUB             shift and go to state 37
    ADD             shift and go to state 38
    IDENT           shift and go to state 30
    LPAREN          shift and go to state 31
    LSQBR           shift and go to state 43
    STRING          shift and go to state 44
    BOOL            shift and go to state 45
    NUM             shift and go to state 46

    fargs                          shift and go to state 59
    expression                     shift and go to state 34
    binop                          shift and go to state 35
    unop                           shift and go to state 36
    term                           shift and go to state 40
    functionStatement              shift and go to state 42

state 32

    (15) functionStatement -> IDENT LPAREN fargs . RPAREN
    RPAREN          shift and go to state 60


state 33

    (16) functionStatement -> IDENT LPAREN RPAREN .
    EOL             reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    OR              reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    AND             reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    BITXOR          reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    BITOR           reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    BITAND          reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    SAR             reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    SAL             reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    NEQ             reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    EQ              reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    GTEQ            reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    GT              reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    LTEQ            reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    LT              reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    MOD             reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    DIV             reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    MUL             reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    SUB             reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    ADD             reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    COMMA           reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    RPAREN          reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    SLICE           reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)
    RSQBR           reduce using rule 16 (functionStatement -> IDENT LPAREN RPAREN .)


state 34

    (31) fargs -> expression .
    (32) fargs -> expression . COMMA fargs
    RPAREN          reduce using rule 31 (fargs -> expression .)
    RSQBR           reduce using rule 31 (fargs -> expression .)
    COMMA           shift and go to state 61


state 35
